--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -2,22 +2,22 @@ en: &en
   sourcerer:
     errors:
       install:
-        multiple_packages_found: Multiple sources for %{package} were found. Pass the `source:` option and set it to one of the available sources %{source_types}
+        multiple_packages_found: "Multiple packages for %{package} were found. Set the `type:` option for the package you want: %{types}"
     cli:
       install:
         description: Install a package
-        installing_package: Installing %{package} from %{source} to %{destination}
-        multiple_packages_found: Multiple sources for %{package} were found. Choose which location to install from
+        installing_package: Installing %{package} from %{type} to %{destination}
+        multiple_packages_found: Multiple packages for %{package} were found. Choose which type to install from...
         options:
           destination:
             description: Specify the directory to install packages to
-          source:
-            description: Specify the source type to install from
+          type:
+            description: Specify the type of package to install
           version:
             description: Specify the version to install
       help:
         description: Show all commands or get information on a specific one
-  
+
 # regional variations
 en_gb:
   <<: *en
